Fix line-wrap in message window

--- a/common/trivnet.css
+++ b/common/trivnet.css
@@ -22,16 +22,15 @@ img { border: 0px; }
 	padding: 2px;
 	text-align: left;
 	font-family: monospace;
-	overflow: visible;
 }
 .messagesBig {
 	height: 600px;
 }
 .whoami { text-align: right; }
 /* .msgItem { height: 16px; } */
-.msgSymbol { position: relative; left: 0px; text-align: left; }
-.msgLeft { position: relative; left: 18px; text-align: left; }
-.msgRight { position: absolute; right: 24px; text-align: right; inherit background-color; }
-.msgCenter { position: relative; left: 160px; text-align: center; }
+.msgSymbol {  left: 0px; text-align: left; }
+.msgLeft {  left: 18px; text-align: left; }
+.msgRight {  right: 24px; text-align: right; }
+.msgCenter {  left: 160px; text-align: center; }
 .evenRow { background-color: #bebebe; }
 .oddRow { background-color: #ffffff; }
